--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'nu.studer.jooq' version '4.1'
 }
 
 group 'org.example'
@@ -12,57 +11,16 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    mapstructVersion = '1.3.1.Final'
-    jooqVersion = '3.11.11'
-    postgresVersion = '42.2.2'
-}
-
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.18'
     annotationProcessor 'org.projectlombok:lombok:1.16.18'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'org.assertj:assertj-core:3.11.1'
 
-    compileOnly "org.mapstruct:mapstruct-jdk8:${mapstructVersion}"
-    compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-
-    implementation "org.jooq:jooq:${jooqVersion}"
-    implementation "org.jooq:jooq-meta:${jooqVersion}"
-    implementation "org.jooq:jooq-codegen:${jooqVersion}"
-
-    jooqRuntime "org.postgresql:postgresql:$postgresVersion"
+    compileOnly "org.mapstruct:mapstruct-jdk8:1.3.1.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 }
 
-jooq {
-    version = "${jooqVersion}"
-    domain(sourceSets.main) {
-        jdbc {
-            driver = 'org.postgresql.Driver'
-            url = 'jdbc:postgresql://localhost:5432/test'
-            user = System.getenv('POSTGRES_TEST_CREDS_USR') ?: 'tomcat'
-            password = System.getenv('POSTGRES_TEST_CREDS_PSW') ?: 'tomcat'
-        }
-        generator {
-            database {
-                name = 'org.jooq.meta.postgres.PostgresDatabase'
-                inputSchema = 'surecloud'
-                tableValuedFunctions = true
-                includes = """
-								 tom
-                """
-            }
-            generate {
-                pojos = true
-                pojosEqualsAndHashCode = true
-                jpaAnnotations = false
-                varargSetters = false
-                javaTimeTypes = true
-            }
-            target {
-                packageName = 'com.surecloud.jooq.dto'
-            }
-        }
-    }
-}
+println "sourceSets.main.java.getSrcDirs(): " + sourceSets.main.java.getSrcDirs()
+sourceSets.main.java.srcDir { "${project.buildDir}/generated-src/3" }
+sourceSets.main.java.srcDir { "${project.buildDir}/generated-src/1" }
+sourceSets.main.java.srcDir { "${project.buildDir}/generated-src/2" }
+println "sourceSets.main.java.getSrcDirs(): " + sourceSets.main.java.getSrcDirs()
